--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <p>this is github workshop</p>
-        <p>this is sub branch</p>
+        <p>this is main branch</p>
+        <p>added a new button</p>
     <body>
 </html>
