Add paragraph for pull request context

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <body>
         <p>this is github workshop</p>
         <p>this is sub branch</p>
+        <p>using this for pull</p>
     <body>
 </html>
